# MPointer

./: CMakeLists.txt  DEFINITIONS.h  MPointer.cpp  MPointer.h  README.md  main.cpp
Cliente/: Cliente.cpp  Cliente.h
MPointerLista/: ListaMPointer.cpp  ListaMPointer.h  NodoMPointer.cpp  NodoMPointer.h
garbagecollector/: MPointerGC.cpp  MPointerGC.h
listampointer/: BubbleSortMPointer.cpp  BubbleSortMPointer.h  InsertionSortMPointer.cpp  InsertionSortMPointer.h  ListaMPointer.cpp  ListaMPointer.h  QuicksortMPointer.cpp  QuicksortMPointer.h
